--- a/app/src/main/res/layout/file_explorer_tab_fragment.xml
+++ b/app/src/main/res/layout/file_explorer_tab_fragment.xml
@@ -13,8 +13,7 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        android:paddingHorizontal="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -23,8 +22,7 @@
             android:layout_height="match_parent"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:clickable="true"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="8dp"
+            android:padding="8dp"
             android:src="@drawable/ic_round_home_24" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -48,7 +46,7 @@
         android:layout_height="0dp"
         android:fadeScrollbars="true"
         android:nestedScrollingEnabled="false"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:scrollbarSize="10dp"
         android:scrollbarThumbVertical="@drawable/fastscroll_thumb"
         android:scrollbars="vertical"
