--- a/app/src/main/res/menu/text_editor_menu.xml
+++ b/app/src/main/res/menu/text_editor_menu.xml
@@ -65,6 +65,11 @@
                 android:checkable="true"
                 android:checked="false"
                 android:title="Read only" />
+            <item
+                android:id="@+id/editor_option_smooth_mode"
+                android:checkable="true"
+                android:checked="false"
+                android:title="Smooth Mode" />
         </menu>
     </item>
 
