--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:alpha="0.7"
-            android:text="Storage"
+            android:text="@string/storage"
             android:textSize="14sp" />
 
         <!-- Storage Directory -->
@@ -57,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="2dp"
-                    android:text="Storage Directory"
+                    android:text="@string/storage_directory"
                     android:textSize="14sp" />
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -102,7 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="2dp"
-                    android:text="Root Directory"
+                    android:text="@string/root_directory"
                     android:textSize="14sp" />
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -128,7 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="12dp"
             android:alpha="0.7"
-            android:text="Tools"
+            android:text="@string/tools"
             android:textSize="14sp" />
 
         <!-- Apps -->
