feat: Add image viewer and improve text editor
This commit introduces an image viewer and enhances the text editor with new features.

- **Image Viewer:**

  - Added a new activity to display images using ZoomageView for zooming and panning.
  - Integrated Glide for image loading.

- **Text Editor Improvements:**
  - Implemented search options for case sensitivity, whole word search, and regular expression search.
  - Added a menu to toggle search options and
 close the search panel.
  - Fixed an issue with the bottom margin of the editor when the IME is visible.

- **Dependency Updates:**
  - Updated Sora Editor to a newer snapshot version.
  - Added Zoomage library for image viewing.

- **Other Changes:**
  - Added a new Maven repository for snapshot dependencies.

--- a/app/src/main/res/layout/text_editor_activity.xml
+++ b/app/src/main/res/layout/text_editor_activity.xml
@@ -128,6 +128,13 @@
                     android:layout_margin="3dp"
                     android:layout_weight="1"
                     android:text="Next" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/more"
+                    style="@style/Widget.Material3.Button.IconButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:icon="@drawable/baseline_more_vert_24" />
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
